revert to XLSForm/pyxform

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -51,7 +51,7 @@ pymongo
 # sms support
 dict2xml
 lxml
--e git+https://github.com/ukanga/pyxform.git@refactor-pyxform-test-case#egg=pyxform
+-e git+https://github.com/XLSForm/pyxform.git@master#egg=pyxform
 
 # spss
 #-e git+https://bitbucket.org/fomcl/savreaderwriter.git@v3.4.2#egg=savreaderwriter
